fixed carousel too much recursion error

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -43,5 +43,8 @@ img{
 
 .hidden{
     opacity: 0;
+}
+
+.d-none{
     display: none;
 }
